# laf

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md
.github/workflows/: build.yml  clang-tidy.yml  clang_tidy.yml  clang_tidy_post.yml  lint_commit.yml
base/: CMakeLists.txt  README.md  base.h  base64.cpp  cfile.cpp  codepoint.h  concurrent_queue.h  config.h.cmakein  convert_to.cpp  convert_to.h  debug.h  dll_win32.h  exception.cpp  file_content.cpp  file_handle.cpp  file_handle.h  file_handle_tests.cpp  fs.cpp  fs.h  fs_tests.cpp  fs_unix.h  fs_win32.h  glyph.h  launcher.cpp  log.cpp  log.h  memory.cpp  memory.h  path.cpp  path.h  path_tests.cpp  pi.h  platform.cpp  platform.h  platform_unix.cpp  process.cpp  process.h  program_options.cpp  program_options_tests.cpp  recent_items.h  (+29 more)
base/win/: comptr.h  registry.h
cmake/: FindHarfBuzz.cmake  FindSkia.cmake  LafFindTests.cmake
docs/: README.md
examples/: CMakeLists.txt  allevents.cpp  base64.cpp  complextextlayout.cpp  custom_window.cpp  drag_and_drop.cpp  floating_window.cpp  hello_laf.cpp  helloworld.cpp  listfonts.cpp  listscreens.cpp  multiple_windows.cpp  multipledisplays.cpp  panviewport.cpp  shader.cpp  text_shape.cpp
ft/: CMakeLists.txt  algorithm.h  face.h  hb_shaper.h
gfx/: CMakeLists.txt  clip.h  color_space.cpp  color_space.h  fwd.h  hsl.cpp  hsv.cpp  hsv.h  matrix_skia.h  packing_rects.cpp  packing_rects.h  packing_rects_tests.cpp  path_none.h  path_skia.h  point.h  rect.h  rect_tests.cpp  region.cpp  region.h  region_skia.h  region_tests.cpp  rgb.cpp  size.h  size_io.h
os/: CMakeLists.txt  LICENSE.txt  README.md  app_main_tests.cpp  capabilities.h  color_space.h  display.h  display_spec.h  dnd.cpp  dnd.h  draw_text.cpp  draw_text.h  error.cpp  event.cpp  event.h  event_queue.h  font_manager.h  menus.h  native_cursor.h  native_dialogs.h  os.h  paint.h  scoped_handle.h  surface.h  system.h  tablet_options.h  window.cpp  window.h  window_spec.h
os/common/: event_queue.cpp  event_queue_with_resize_display.h  main.cpp  sprite_sheet_font.h  system.cpp  system.h
os/gl/: gl_context.h  gl_context_nsgl.h
os/gtk/: native_dialogs.cpp
os/none/: os.cpp  system.cpp
os/osx/: app.h  app.mm  app_delegate.mm  color_space.h  color_space.mm  dnd.h  dnd.mm  event_queue.h  event_queue.mm  menus.mm  native_dialogs.mm  screen.h  system.h  system.mm  view.h  view.mm  window.h  window.mm  window_delegate.h
os/skia/: paint.h  resize_surface.cpp  resize_surface.h  skia_color_space.cpp  skia_color_space.h  skia_color_space_osx.mm  skia_color_space_win.cpp  skia_color_space_x11.cpp  skia_display.cpp  skia_display.h  skia_draw_text.cpp  skia_draw_text_with_shaper.cpp  skia_font.cpp  skia_font.h  skia_font_manager.cpp  skia_font_manager.h  skia_gl.cpp  skia_helpers.h  skia_surface.cpp  skia_surface.h  skia_system.cpp  skia_system.h  skia_window.cpp  skia_window.h  skia_window_base.h  skia_window_osx.h  skia_window_osx.mm  skia_window_win.cpp  skia_window_win.h  skia_window_x11.cpp  skia_window_x11.h
os/win/: color_space.cpp  color_space.h  dnd.cpp  dnd.h  event_queue.cpp  event_queue.h  keys.h  native_dialogs.cpp  native_dialogs.h  pen.cpp  pen.h  screen.h  system.cpp  system.h  winapi.cpp  winapi.h  window.cpp  window.h  window_dde.cpp  wintab.cpp  wintab.h
os/x11/: event_queue.cpp  event_queue.h  mouse.h  native_dialogs.cpp  screen.h  system.cpp  system.h  window.cpp  window.h  x11.cpp  x11.h  xinput.cpp  xinput.h
text/: CMakeLists.txt  draw_text.cpp  draw_text.h  draw_text_shaper.cpp  empty_font_mgr.cpp  font.h  font_metrics.h  font_mgr.cpp  font_mgr.h  font_style.h  font_style_set.h  freetype_font.cpp  freetype_font.h  fwd.h  skia_draw_text.cpp  skia_draw_text_with_shaper.cpp  skia_font.cpp  skia_font.h  skia_font_mgr.cpp  skia_font_mgr.h  skia_text_blob.cpp  skia_text_blob.h  skia_text_blob_shaper.cpp  skia_with_shaper.cpp  sprite_sheet_font.h  sprite_text_blob.cpp  sprite_text_blob.h  sprite_text_blob_shaper.cpp  text.h  text_blob.cpp  text_blob.h  text_blob_shaper.cpp  typeface.h
